# demobyte

./: AUDIO_OUT_FIX_NOTES.txt  AUDIO_OUT_FIX_V2_NOTES.txt  AUDIO_TONE_TEST_NOTES.txt  CMakeLists.txt  HYBRID_V3_NOTES.txt  MINIMAL_HW_NOTES.md  OPTIMIZATION_AUDIT_STAGE_A.txt  OPTIMIZATION_AUDIT_STAGE_B.txt  OPTIMIZATION_AUDIT_STAGE_C.txt  OPTIMIZATION_AUDIT_STAGE_D.txt  OPTIMIZATION_AUDIT_STAGE_E.txt  OPTIMIZATION_AUDIT_STAGE_F.txt  OPTIMIZATION_AUDIT_STAGE_G.txt  OPTIMIZATION_AUDIT_STAGE_H.txt  OPTIMIZATION_AUDIT_STAGE_I.txt  OPTIMIZATION_AUDIT_STAGE_J.txt  README.md  README.txt  README_START.md  README_TESTE0_DAC.txt  STAGE10A_MACRO_CORE_NOTES.txt  STAGE10B_BUG_SCRUB_NOTES.txt  STAGE10C_RHYTHM_MOD_NOTES.txt  STAGE10E_CLEANUP_NOTES.txt  STAGE10F_BASS_QUANTIZED.txt  STAGE10G_BASS_ADVANCED.txt  STAGE10H_BASS_SYNC.txt  STAGE10I_BASS_SEQ_SYNC_NOTES.txt  STAGE10J_CLEANUP_NOTES.txt  STAGE10K_MACRO_REFINE_NOTES.txt  STAGE10L_TRANSPORT_COUPLING_NOTES.txt  STAGE10M_INTEGRATION_SCRUB_NOTES.txt  STAGE10O_AUDIO_DRIVEN_MOD_NOTES.txt  STAGE10P_AUDIO_DRIVEN_SCRUB_NOTES.txt  STAGE10Q_CRITICAL_FIXES_NOTES.txt  STAGE10S_A_DECISION_DETECT_NOTES.txt  STAGE10S_B_BASS_DECISIONS_NOTES.txt  STAGE10S_C_NOTE_DECISIONS_NOTES.txt  STAGE10S_D_FX_DECISIONS_NOTES.txt  STAGE10T_DECISION_STABILIZATION_NOTES.txt  (+54 more)
.github/workflows/: build.yml  buildyml
audio/: PLACE_YOUR_KNOWN_GOOD_I2S_FILES_HERE.txt  audio_engine.cpp  audio_engine.h  audio_output.h  audio_output_i2s.cpp  audio_output_i2s.h  audio_output_pwm.cpp  audio_output_pwm.h  float_ops.h  floatbeat_seed.h  operators.cpp  operators.h  pcm5102_i2s.pio
audio/drums/: drum_engine.cpp  drum_engine.h
audio/dsp/: ar_envelope.h  dc_blocker.h  limiter.h  soft_clip.h
drums/: drum_engine.cpp  drum_engine.h
dsp/: chorus.h  delay_line.h  dsp_chain.cpp  dsp_chain.h  exciter.h  fast_trig.h  grain_freeze.h  hp_filter.h  lp_filter.h  reverb.cpp  reverb.h  snap_gate.h  stutter_fx.cpp  stutter_fx.h
hardware/: pin_config.h
io/: adc_handler.cpp  adc_handler.h  cap_pad_handler.cpp  cap_pad_handler.h  cap_pad_hybrid.cpp  cap_pad_hybrid.h  cap_pad_validate.h  control_frame.h  encoder.cpp  encoder.h  input_router.cpp  input_router.h  minimal_touch_pads.cpp  minimal_touch_pads.h  pads.cpp  pads.h  pot_handler.h
led/: led_controller.h  led_update_params.h  ws2812.pio
master/: master.cpp  master.h
midi/: midi_router.cpp  midi_router.h  uart_midi.cpp  uart_midi.h
sequencer/: clock_in.cpp  clock_in.h  clock_out.cpp  clock_out.h  event_types.h  sequencer.cpp  sequencer.h
state/: encoder_state.h  flash_store.cpp  flash_store.h  snapshot_event.h  state_manager.cpp  state_manager.h  state_manager_patch.cpp
synth/: bytebeat_engine.cpp  bytebeat_engine.h  bytebeat_graph.cpp  bytebeat_graph.h  bytebeat_node.h  glide.cpp  glide.h  lead_osc.h  note_mode.h  quantizer.cpp  quantizer.h  simple_synth.cpp  simple_synth.h  zone_config.h
ui/: oled_display.cpp  oled_display.h  ui_renderer.cpp  ui_renderer.h
utils/: debug_log.h  ring_buffer.h
